@@ -696,6 +696,10 @@ _load_fim_history
 [in,g:] if 1 on startup, will load the ~/.fim_history file on startup
 .fi
 .B
+_load_hidden_dirs
+[in,g:] if not 1, when pushing directories/files, those whose name begins with a dot (.) will be skipped.
+.fi
+.B
 _lwidth
 [in,g:] if>0, will force the output console text width
 .fi
@@ -753,7 +757,7 @@ _push_checks
 .fi
 .B
 _push_pushes_dirs
-[in,g:] if 1, the push command will also accept and push directories (using pushdir)
+[in,g:] if 1, the push command will also accept and push directories (using pushdir). if 2, will also push hidden files/directories, that is, ones whose names begin with a dot (.). 
 .fi
 .B
 _pushdir_re
@@ -1066,6 +1070,7 @@ bind '`' "toggleLimitMarked;";
 alias "toggleVerbosity" "_display_console=1\-_display_console;i:fresh=1;redisplay;" "";
 alias "toggleKeyVerbosity" "_verbose_keys=1\-_verbose_keys;redisplay;" "";
 alias "toggleDesaturate" "_autodesaturate=1\-_autodesaturate;redisplay;" "";
+alias "idempotent_cmd" "goto '+0p';";
 #
 # autocommands are essential to Fim's automated behaviour
 # examples:
@@ -1101,6 +1106,7 @@ autocmd "PostReload"   "" "if(i:fresh){redisplay;}";
 autocmd "PostInteractiveCommand"   "" "if(i:fresh){display;i:fresh=0;}";
 autocmd "PostInteractiveCommand"   "" "if(_want_prefetch){prefetch;}";
 autocmd "PostInteractiveCommand"   "" "if(_display_console==0 && i:fresh){redisplay;i:fresh=0;}";
+autocmd "PostInteractiveCommand"   "" "idempotent_cmd;"; # Bug workaround: without it console scroll is broken.
 
 alias "next10" "i=0;while(i<10){i=i+1;next;display;sleep '1';};" "goes forward 10 images";
 bind 'N' 'next10';
