@@ -3,6 +3,9 @@
 
                 Version 0.6-trunk
 
+# (r965)
+ * if _push_pushes_dirs is 2, will also push hidden files and directories; that is,
+   ones whose names begin with a dot (.)
 # (r963)
  * if configure'ing with --enable-c++11, the --recursive-background switch will load
    images in the background recursively, allowing viewing in the order they appear.
